# djanco_queries

./: Cargo.toml  README.md
output/: query_10.csv  query_13.csv  query_14.csv  query_15.csv  query_2.csv  query_4.csv  query_5.csv  query_6.csv  query_7.csv  test0
src/: lib.rs  main.rs  queries.rs
